# pipeText

./: Cargo.toml  delta.mjs  index.html  pipetext-rs.code-workspace
pipetext/: delta.mjs  input_range.mjs  ot-core.mjs  pipetext.mjs  tree-builder.mjs
pipetext/tree-sitter/: tree-sitter.js
src/: delta.rs  input.rs  lib.rs  recursive_tree_builder.rs  test.rs  tree_builder.rs  tree_sitter_wasm_bindings.rs
styles/: base.css  selenized-dark.css  solarized-dark.css
