[package]
name = "pipetext"
version = "0.1.0"
authors = ["Ethan Spurlock <ethan@spurlock.io>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
xi-rope = "0.3.0"
js-sys = "0.3.35"
wasm-bindgen = "0.2.58"
wasm-bindgen-test = "0.3.8"
lazy_static = "1.4.0"
console_error_panic_hook = "0.1.6"
wasm-bindgen-futures = "0.4.8"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'Selection',
  'Event',
  'KeyboardEvent',
  'EventTarget',
  'Range',
  'console'
]
